Lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC DefList error RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | IF LP error RP Stmt
   40     | IF LP Exp RP error ELSE Stmt
   41     | WHILE LP error RP Stmt
   42     | RETURN Exp error

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | LP error RP
   70    | ID LP error RP
   71    | Exp LB error RB
   72    | Exp ASSIGNOP error
   73    | Exp AND error
   74    | Exp OR error
   75    | Exp RELOP error
   76    | Exp PLUS error
   77    | Exp MINUS error
   78    | Exp STAR error
   79    | Exp DIV error
   80    | LP Exp error
   81    | NOT error

   82 Args: Exp COMMA Args
   83     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 16 22 25 38 39 40 41 42 46 69 70 71 72 73 74 75 76
    77 78 79 80 81
INT (258) 21 67
FLOAT (259) 68
ID (260) 17 19 20 23 24 25 62 63 65 66 70
SEMI (261) 4 5 7 8 32 34 38 45 46
COMMA (262) 11 26 48 82
ASSIGNOP (263) 50 51 72
RELOP (264) 54 75
PLUS (265) 55 76
MINUS (266) 56 60 77
STAR (267) 57 78
DIV (268) 58 79
AND (269) 52 73
OR (270) 53 74
NOT (271) 61 81
TYPE (272) 12
LP (273) 23 24 25 35 36 37 39 40 41 59 62 63 69 70 80
RP (274) 23 24 25 35 36 37 39 40 41 59 62 63 69 70
LB (275) 21 22 64 71
RB (276) 21 22 64 71
LC (277) 14 16 29
RC (278) 14 16 29
STRUCT (279) 14 15 16
RETURN (280) 34 42
IF (281) 35 36 39 40
ELSE (282) 36 40
WHILE (283) 37 41
DOT (284) 65
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (35)
    on left: 10 11, on right: 4 11
Specifier (36)
    on left: 12 13, on right: 4 5 6 8 9 28 45 46
StructSpecifier (37)
    on left: 14 15 16, on right: 13
OptTag (38)
    on left: 17 18, on right: 14 16
Tag (39)
    on left: 19, on right: 15
VarDec (40)
    on left: 20 21 22, on right: 10 11 21 22 28 49 50
FunDec (41)
    on left: 23 24 25, on right: 6
VarList (42)
    on left: 26 27, on right: 23 26
ParamDec (43)
    on left: 28, on right: 26 27
CompSt (44)
    on left: 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 29 30
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 30 35 36 37
    39 40 41
DefList (47)
    on left: 43 44, on right: 14 16 29 43
Def (48)
    on left: 45 46, on right: 43
DecList (49)
    on left: 47 48, on right: 45 48
Dec (50)
    on left: 49 50, on right: 47 48
Exp (51)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81, on right: 32 34 35 36 37
    40 42 50 51 52 53 54 55 56 57 58 59 60 61 64 65 71 72 73 74 75
    76 77 78 79 80 82 83
Args (52)
    on left: 82 83, on right: 62 82


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error SEMI
    9       | Specifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error . SEMI
    9       | Specifier error .

    SEMI  shift, and go to state 22

    $default  reduce using rule 9 (ExtDef)


State 16

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 22

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   14 StructSpecifier: STRUCT OptTag LC DefList . RC
   16                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 46
    RC     shift, and go to state 47


State 31

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 31


State 32

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 49


State 33

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 34

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 50


State 35

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 36

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 27 (VarList)


State 37

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 38

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 39

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 53


State 40

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 41

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 42

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


State 43

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 26

    $default  reduce using rule 49 (Dec)


State 44

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 45

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 47 (DecList)


State 46

   16 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 73


State 47

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 48

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 49

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 50

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


State 51

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 52

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 36


State 53

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 54

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 55

   38 Stmt: error . SEMI

    SEMI  shift, and go to state 75


State 56

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 57

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 58

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   70    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 66 (Exp)


State 59

   60 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 77


State 60

   61 Exp: NOT . Exp
   81    | NOT . error

    error  shift, and go to state 78
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 79


State 61

   59 Exp: LP . Exp RP
   69    | LP . error RP
   80    | LP . Exp error

    error  shift, and go to state 80
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 81


State 62

   34 Stmt: RETURN . Exp SEMI
   42     | RETURN . Exp error

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 82


State 63

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP error RP Stmt
   40     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 83


State 64

   37 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP error RP Stmt

    LP  shift, and go to state 84


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 67

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 86
    Stmt      go to state 67
    Exp       go to state 68


State 68

   32 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB error RB
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96
    DOT       shift, and go to state 97


State 69

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 70

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 98


State 71

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 72

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 99
    Dec      go to state 45


State 73

   16 StructSpecifier: STRUCT OptTag LC DefList error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 74

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 75

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 76

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   70    | ID LP . error RP

    error  shift, and go to state 100
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 101

    Exp   go to state 102
    Args  go to state 103


State 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB error RB
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    LB    shift, and go to state 96
    DOT   shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 78

   81 Exp: NOT error .

    $default  reduce using rule 81 (Exp)


State 79

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB error RB
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error

    LB   shift, and go to state 96
    DOT  shift, and go to state 97

    $default  reduce using rule 61 (Exp)


State 80

   69 Exp: LP error . RP

    RP  shift, and go to state 104


State 81

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB error RB
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   80    | LP Exp . error

    error     shift, and go to state 105
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 106
    LB        shift, and go to state 96
    DOT       shift, and go to state 97


State 82

   34 Stmt: RETURN Exp . SEMI
   42     | RETURN Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   71    | Exp . LB error RB
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
